# machine-learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb
notebooks/data_science/: basics.ipynb
notebooks/data_science/numpy/: ndarray.ipynb
src/: main.py
src/data_science/: example.py
src/linear_algebra/: __init__.py  operations.py
tests/: test_linear_algebra.py
